--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "typescript": "~4.9.4"
   },
   "dependencies": {
+    "@aws-cdk/aws-apigateway": "^1.193.0",
     "@aws-cdk/aws-lambda": "^1.193.0",
     "aws-cdk-lib": "2.59.0",
     "constructs": "^10.0.0"
